--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       <h2 class="project-tagline"> <b>NeurIPS 2023</b> </h2>
       <h2 class="project-tagline"><a href="https://dw-hongquan.github.io/LithoSim/" >Hongquan He</a> &nbsp;&nbsp; <a href="https://dw-hongquan.github.io/LithoSim/">Zhen Wang</a> &nbsp;&nbsp;  <a href="https://dw-hongquan.github.io/LithoSim/">Jingya Wang</a> &nbsp;&nbsp;  <a href="https://dw-hongquan.github.io/LithoSim/">Tao Wu</a> &nbsp;&nbsp;  <a href="https://dw-hongquan.github.io/LithoSim/">Xuming He</a> &nbsp;&nbsp;  <a href="https://dw-hongquan.github.io/LithoSim/">Bei yu</a> &nbsp;&nbsp;  <a href="https://dw-hongquan.github.io/LithoSim/">Jingyi Yu</a> &nbsp;&nbsp;  <a href="https://dw-hongquan.github.io/LithoSim/">Hao Geng</a></h2>
-      <h2 class="project-tagline"> Simon Fraser University </h2>
+      <h2 class="project-tagline"> ShanghaiTech University & The Chinese University of Hong Kong</h2>
       <a href="https://arxiv.org/abs/2306.01461" class="btn">Arxiv</a>
       <a href="https://github.com/woodfrog/poly-diffuse" class="btn">Code</a>
       <!-- {% if site.github.is_project_page %}
