--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,8 +35,8 @@
       <h2 class="project-tagline"> <b>NeurIPS 2025 Dataset and Benchmark</b> </h2>
       <h2 class="project-tagline"><a href="https://dw-hongquan.github.io/LithoSim/" >Hongquan He</a> &nbsp;&nbsp; <a href="https://dw-hongquan.github.io/LithoSim/">Zhen Wang</a> &nbsp;&nbsp;  <a href="https://dw-hongquan.github.io/LithoSim/">Jingya Wang</a> &nbsp;&nbsp;  <a href="https://dw-hongquan.github.io/LithoSim/">Tao Wu</a> &nbsp;&nbsp;  <a href="https://dw-hongquan.github.io/LithoSim/">Xuming He</a> &nbsp;&nbsp;  <a href="https://dw-hongquan.github.io/LithoSim/">Bei yu</a> &nbsp;&nbsp;  <a href="https://dw-hongquan.github.io/LithoSim/">Jingyi Yu</a> &nbsp;&nbsp;  <a href="https://dw-hongquan.github.io/LithoSim/">Hao Geng</a></h2>
       <h2 class="project-tagline"> ShanghaiTech University & The Chinese University of Hong Kong</h2>
-      <a href="https://arxiv.org/abs/2306.01461" class="btn">Arxiv</a>
-      <a href="https://github.com/woodfrog/poly-diffuse" class="btn">Code</a>
+      <a href="https://dw-hongquan.github.io/LithoSim/paper.pdf" class="btn">Paper</a>
+      <a href="https://github.com/dw-hongquan/LithoSim" class="btn">Code</a>
       <!-- {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a> -->
       <!-- {% endif %} -->
