--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,7 @@
       <h2 class="project-tagline"> ShanghaiTech University & The Chinese University of Hong Kong</h2>
       <a href="https://dw-hongquan.github.io/LithoSim/" class="btn">Project Homepage</a>
       <a href="https://github.com/dw-hongquan/LithoSim" class="btn">Code</a>
+      <a href="https://huggingface.co/datasets/grandiflorum/LithoSim" class="btn">Dataset</a>
       <!-- {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a> -->
       <!-- {% endif %} -->
