--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,8 +32,8 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-      <h2 class="project-tagline"> <b>NeurIPS 2025 Dataset and Benchmark (Under-review)</b> </h2>
-      <h2 class="project-tagline"><a href="https://dw-hongquan.github.io/LithoSim/" >Hongquan He</a> &nbsp;&nbsp; <a href="https://dw-hongquan.github.io/LithoSim/">Zhen Wang</a> &nbsp;&nbsp;  <a href="https://dw-hongquan.github.io/LithoSim/">Jingya Wang</a> &nbsp;&nbsp;  <a href="https://dw-hongquan.github.io/LithoSim/">Tao Wu</a> &nbsp;&nbsp;  <a href="https://dw-hongquan.github.io/LithoSim/">Xuming He</a> &nbsp;&nbsp;  <a href="https://dw-hongquan.github.io/LithoSim/">Bei Yu</a> &nbsp;&nbsp;  <a href="https://dw-hongquan.github.io/LithoSim/">Jingyi Yu</a> &nbsp;&nbsp;  <a href="https://dw-hongquan.github.io/LithoSim/">Hao Geng</a></h2>
+      <h2 class="project-tagline"> <b>NeurIPS 2025 Dataset and Benchmark (Poster)</b> </h2>
+      <h2 class="project-tagline"><a href="https://openreview.net/profile?id=~Hongquan_He1" >Hongquan He</a> &nbsp;&nbsp; <a href="https://openreview.net/profile?id=~Zhen_Wang44">Zhen Wang</a> &nbsp;&nbsp;  <a href="https://faculty.sist.shanghaitech.edu.cn/faculty/wangjingya/">Jingya Wang</a> &nbsp;&nbsp;  <a href="https://sist.shanghaitech.edu.cn/wutao/list.htm">Tao Wu</a> &nbsp;&nbsp;  <a href="https://faculty.sist.shanghaitech.edu.cn/faculty/hexm/index.html">Xuming He</a> &nbsp;&nbsp;  <a href="https://www.cse.cuhk.edu.hk/~byu/">Bei Yu</a> &nbsp;&nbsp;  <a href="https://faculty.sist.shanghaitech.edu.cn/yujingyi/">Jingyi Yu</a> &nbsp;&nbsp;  <a href="https://sist.shanghaitech.edu.cn/genghao_en/main.htm">Hao Geng</a></h2>
       <h2 class="project-tagline"> ShanghaiTech University & The Chinese University of Hong Kong</h2>
       <a href="https://dw-hongquan.github.io/LithoSim/" class="btn">Project Homepage</a>
       <a href="https://github.com/dw-hongquan/LithoSim" class="btn">Code</a>
